# embedded-pydicom-react-viewer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  download_pyodide.sh  main.py  package.json  pyproject.toml  react-app-rewired.config.js  tsconfig.json
public/: index.html  manifest.json
public/python/: dicom_parser.py  plot.py  pyodide_init.py
python/: dicom_parser.py  pyodide_init.py
python/exp/: compressed.py
src/: App.tsx  MyWorker.worker.ts  Pyodide.worker.ts  canvasRenderer.ts  charLS-DynamicMemory-browser.js  jpeg-ls.js  jpegDecoder.ts  jpx.js  pyodideHelper.ts  utility.ts
