[tool.poetry]
name = "embedded-python-dicom-visualization-reactapp"
version = "0.1.0"
description = ""
authors = ["Grimmer <grimmer0125@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = {version = "^21.9b0", allow-prereleases = true}
pydicom = "^2.2.1"
numpy = {version = "^1.21.2", python = ">=3.9,<3.11"}
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

